Fixed yourNotesUrl input loading, z-index of popup

--- a/public/stylesheets/tcss.css
+++ b/public/stylesheets/tcss.css
@@ -541,6 +541,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 10;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .float-left {
   float: left;
 }
